--- a/install/odh/base/kustomization.yaml
+++ b/install/odh/base/kustomization.yaml
@@ -1,13 +1,12 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: opendatahub
 commonLabels:
   app: odh-dashboard
   app.kubernetes.io/part-of: odh-dashboard
 resources:
 - role.yaml
-- service_account.yaml
-- role_binding.yaml
+- service-account.yaml
+- role-binding.yaml
 - deployment.yaml
 - routes.yaml
 - service.yaml
