--- a/install/odh/base/role.yaml
+++ b/install/odh/base/role.yaml
@@ -19,3 +19,19 @@ rules:
       - get
       - list
       - watch
+  - apiGroups:
+      - project.openshift.io
+    resources:
+      - projects
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - ""
+    resources:
+      - namespaces
+    verbs:
+      - get
+      - list
+      - watch
